<resources>
    <string name="app_name">Mahiru</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Cài đặt</string>
    <string name="nav_delete">Thùng rác</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_my_profile">Thông tin cá nhân</string>
    <string name="nav_change_password">Đổi mật khẩu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="more">More</string>
    <string name="content_description_share">Share content</string>
    <string name="content_description_delete">Delete content</string>
    <string name="content_description_more">More options</string>

    --check_internet---
    <string name="op">OOPS!</string>
    <string name="no">No Internet connection</string>
    <string name="pl">Please check your connection</string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>