<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>
        <item android:id="@+id/nav_delete"
            android:title="@string/nav_delete"
            android:icon="@drawable/ic_baseline_delete_24"/>
        <item android:id="@+id/nav_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"/>
    </group>
    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/my_profile"
                android:icon="@drawable/ic_my_profile"
                android:title="@string/nav_my_profile"/>
            <item android:id="@+id/change_password"
                android:title="@string/nav_change_password"
                android:icon="@drawable/ic_change_password"/>
            <item android:id="@+id/sign_out"
                android:title="Đăng xuất"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>
    <item android:title="Ứng dụng">
        <menu>
            <item android:id="@+id/phan_hoi"
                android:icon="@drawable/ic_baseline_feedback_24"
                android:title="Phản hồi"/>
            <item android:id="@+id/thong_tin_app"
                android:title="Thông tin app"
                android:icon="@drawable/ic_baseline_info_24"/>
            <item android:id="@+id/tro_giup"
                android:title="Trợ giúp"
                android:icon="@drawable/ic_baseline_question_mark_24"/>

        </menu>
    </item>
</menu>